--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.1",
     "express-session": "^1.14.1",
     "mongodb": "^2.2.10",
+    "mongoose": "^4.6.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   },
