--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "react-authentication-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Node/Express auth backend",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ethanjfriedman/express-auth-backend.git"
   },
   "author": "Ethan Friedman <ethanjfriedman@gmail.com> (http://www.ethanjfriedman.com)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ethanjfriedman/express-auth-backend/issues"
+  },
+  "homepage": "https://github.com/Ethanjfriedman/express-auth-backend#readme",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-register": "^6.16.3",
     "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.1",
-    "express-session": "^1.14.1",
-    "mongodb": "^2.2.10",
-    "mongoose": "^4.6.3",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.6.3"
   },
   "devDependencies": {
     "morgan": "^1.7.0",
