--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Ethanjfriedman/express-auth-backend#readme",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
@@ -25,5 +29,8 @@
   "devDependencies": {
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
