--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-register": "^6.16.3",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.3"
